# auto-antigravity

./: .gitignore  ANTIGRAVITY_TROUBLESHOOTING.md  CHANGELOG.md  CONTRIBUTING.md  EXTENSION_INSTALLATION.md  PUBLISH_TO_GITHUB.md  README.md  __init__.py  config.py  env_dump.txt  example.py  example_monitoring.py  install_extension.ps1  install_extension.sh  main.py  publish_github.ps1  publish_simple.ps1  pyproject.toml  requirements.txt  scan_ide_api.py  test_import.py  test_validation.ps1
agents/: __init__.py  coder.py  planner.py  reviewer.py  tester.py
core/: __init__.py  api_client.py  context.py  orchestrator.py
docs/: MONITORING_ARCHITECTURE.md
models/: __init__.py  base.py  claude.py  factory.py  gemini.py  null.py  openai.py
monitoring/: __init__.py  auto_accept.py  cache_manager.py  dashboard.py  recovery_tools.py
server/: __init__.py  api.py  find_process.py  run.py  server.py  test_auth.py  test_cloud_auth.py
tests/: __init__.py  test_context.py  test_models.py
utils/: __init__.py  logger.py
vscode-extension/: .gitignore  .vscodeignore  LICENSE.md  README.md  package-lock.json  package.json  webpack.config.js
vscode-extension/src/: api-client.js  dashboard-ui.js  extension-simple.js  extension.js  extension.ts  tree-providers.js
